--- a/CSS/normalize.less
+++ b/CSS/normalize.less
@@ -6,43 +6,11 @@ html {
   height: 100%;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: Arial, "Microsoft Yahei", "Helvetica Neue", Helvetica, sans-serif;
-  -webkit-text-size-adjust: none;
-}
-
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-small,
-big,
-input,
-textarea,
-button,
-select {
+h1, h2, h3, h4, h5, h6, small, big, input, textarea, button, select {
   font-size: 100%;
-  font-family: tahoma, arial, "Hiragino Sans GB", "微软雅黑", simsun, sans-serif;
-  font-weight: normal;
 }
 
-address,
-cite,
-dfn,
-em,
-i,
-optgroup,
-var,
-b,
-strong {
+address, cite, dfn, em, i, var, b, strong, ins, s, u, del, sup, sub {
   font-style: normal;
   font-weight: normal;
 }
@@ -50,44 +18,18 @@ strong {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-  text-align: left;
 }
 
-caption,
-th {
-  text-align: inherit;
-}
-
-ul,
-ol,
-menu {
-  list-style: none;
-}
-
-fieldset,
-img {
-  border: 0;
-}
-
-article,
-aside,
-footer,
-header,
-section,
-nav,
-figure,
-figcaption,
-hgroup,
-details,
-menu {
+ul, ol, menu, fieldset, img, article, aside, footer, header, section, nav, figure, figcaption, hgroup, details, menu {
   display: block;
 }
 
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "\0020";
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after, q:before, q:after {
+  content: none;
 }
 
 textarea {
@@ -95,36 +37,19 @@ textarea {
   resize: vertical;
 }
 
-input,
-textarea,
-select,
-a {
-  outline: 0 none;
-  border: none;
+input, textarea, select, a {
+  outline: none;
 }
 
 input::-moz-focus-inner {
   padding: 0;
-  border: 0
-}
-
-a,
-ins,
-s,
-u,
-del {
-  text-decoration: none;
-}
-
-sup,
-sub {
-  vertical-align: baseline;
-}
-
-hr {
-  border: medium none;
+  border: 0;
 }
 
 a {
   text-decoration: none;
+}
+
+hr {
+  border: none;
 }
